compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__pipes__block_expr_into_pipe.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/pipes.rs
assertion_line: 26
expression: "fn id(a) { a }\npub fn main() {\n  {\n    let x = 1\n    x\n  }\n  |> id\n}"
snapshot_kind: text
---
----- SOURCE CODE
fn id(a) { a }
pub fn main() {
  {
    let x = 1
    x
  }
  |> id
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 1).
-spec id(I) -> I.
id(A) ->
    A.

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    _pipe = begin
        X = 1,
        X
    end,
    id(_pipe).
