compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__pipes__call_pipeline_result.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/pipes.rs
assertion_line: 106
expression: "\npub fn main() {\n  { 1 |> add }(1)\n}\n\npub fn add(x) {\n  fn(y) { x + y }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  { 1 |> add }(1)
}

pub fn add(x) {
  fn(y) { x + y }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([add/1, main/0]).

-file("project/test/my/mod.gleam", 6).
-spec add(integer()) -> fun((integer()) -> integer()).
add(X) ->
    fun(Y) -> X + Y end.

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    begin
        _pipe = 1,
        add(_pipe)
    end(1).
