compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__pipes__clever_pipe_rewriting.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/pipes.rs
assertion_line: 6
expression: "\npub fn apply(f: fn(a) -> b, a: a) { a |> f }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn apply(f: fn(a) -> b, a: a) { a |> f }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([apply/2]).

-file("project/test/my/mod.gleam", 2).
-spec apply(fun((I) -> J), I) -> J.
apply(F, A) ->
    _pipe = A,
    F(_pipe).
