compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__pipes__pipe_in_record_update.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/pipes.rs
assertion_line: 74
expression: "pub type X {\n  X(a: Int, b: Int)\n}\n\nfn id(x) {\n  x\n}\n\npub fn main(x) {\n  X(..x, a: 1 |> id)\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub type X {
  X(a: Int, b: Int)
}

fn id(x) {
  x
}

pub fn main(x) {
  X(..x, a: 1 |> id)
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).
-export_type([x/0]).

-type x() :: {x, integer(), integer()}.

-file("project/test/my/mod.gleam", 5).
-spec id(I) -> I.
id(X) ->
    X.

-file("project/test/my/mod.gleam", 9).
-spec main(x()) -> x().
main(X) ->
    {x,
        begin
            _pipe = 1,
            id(_pipe)
        end,
        erlang:element(3, X)}.
