compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__pipes__pipe_in_tuple.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/pipes.rs
assertion_line: 51
expression: "pub fn x(f) {\n  #(\n    1 |> f\n  )\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn x(f) {
  #(
    1 |> f
  )
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/1]).

-file("project/test/my/mod.gleam", 1).
-spec x(fun((integer()) -> K)) -> {K}.
x(F) ->
    {begin
            _pipe = 1,
            F(_pipe)
        end}.
